--- a/gateway-service/Cargo.toml
+++ b/gateway-service/Cargo.toml
@@ -17,3 +17,4 @@ chrono = "0.4"
 reqwest = { version = "0.11", features = ["json"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+glob = "0.3"
