--- a/audio-worker/Cargo.toml
+++ b/audio-worker/Cargo.toml
@@ -18,5 +18,5 @@ ndarray = "0.16"
 byteorder = "1.5"
 
 [dependencies.ort]
-version = "2.0.0-rc.9"
-features = ["cuda", "half"]
+version = "2.0.0-rc.11"
+features = ["cuda", "half", "load-dynamic"]
