--- a/vision-worker/Cargo.toml
+++ b/vision-worker/Cargo.toml
@@ -22,5 +22,5 @@ base64 = "0.22"
 tower-http = { version = "0.5", features = ["trace", "cors"] }
 
 [dependencies.ort]
-version = "2.0.0-rc.9"
+version = "=2.0.0-rc.9"
 features = ["cuda", "half"]
