Remove unsupported ort tls-rustls feature on rc.9

--- a/audio-worker/Cargo.toml
+++ b/audio-worker/Cargo.toml
@@ -19,4 +19,4 @@ byteorder = "1.5"
 
 [dependencies.ort]
 version = "=2.0.0-rc.9"
-features = ["cuda", "half", "tls-rustls"]
+features = ["cuda", "half"]
