--- a/vision-worker/Cargo.toml
+++ b/vision-worker/Cargo.toml
@@ -22,5 +22,15 @@ base64 = "0.22"
 tower-http = { version = "0.5", features = ["trace", "cors"] }
 
 [dependencies.ort]
-version = "2.0.0-rc.9"
-features = ["cuda", "half"]
+version = "=2.0.0-rc.11"
+default-features = false
+features = [
+    "std",
+    "ndarray",
+    "tracing",
+    "download-binaries",
+    "copy-dylibs",
+    "tls-native",
+    "cuda",
+    "half",
+]
