Add CPU-first runtime config with client-managed server restart and model selection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
       VISION_FORCE_CPU: "${VISION_FORCE_CPU:-1}"
       VISION_CUDA_DEVICE_ID: "${VISION_CUDA_DEVICE_ID:-}"
       VISION_CUDA_MEM_LIMIT_MB: "${VISION_CUDA_MEM_LIMIT_MB:-1024}"
+      VISION_INTRA_THREADS: "${VISION_INTRA_THREADS:-4}"
       ORT_STRATEGY: "${ORT_STRATEGY:-download}"
       NVIDIA_VISIBLE_DEVICES: "${NVIDIA_VISIBLE_DEVICES:-all}"
       NVIDIA_DRIVER_CAPABILITIES: "${NVIDIA_DRIVER_CAPABILITIES:-compute,utility}"
@@ -61,6 +62,7 @@ services:
       AUDIO_FORCE_CPU: "${AUDIO_FORCE_CPU:-1}"
       AUDIO_USE_CUDA: "${AUDIO_USE_CUDA:-0}"
       AUDIO_CUDA_MEM_LIMIT_MB: "${AUDIO_CUDA_MEM_LIMIT_MB:-256}"
+      AUDIO_INTRA_THREADS: "${AUDIO_INTRA_THREADS:-2}"
       ORT_STRATEGY: "${ORT_STRATEGY:-download}"
       NVIDIA_VISIBLE_DEVICES: "${NVIDIA_VISIBLE_DEVICES:-all}"
       NVIDIA_DRIVER_CAPABILITIES: "${NVIDIA_DRIVER_CAPABILITIES:-compute,utility}"
