--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,6 +22,7 @@ services:
     container_name: vision-worker
     working_dir: /workspace/identification
     command: ["bash", "-lc", "cargo run -p vision-worker"]
+    cpuset: "0,1"
     ports:
       - "50052:50052"
     volumes:
@@ -36,11 +37,19 @@ services:
       VISION_FORCE_CPU: "${VISION_FORCE_CPU:-1}"
       VISION_CUDA_DEVICE_ID: "${VISION_CUDA_DEVICE_ID:-}"
       VISION_CUDA_MEM_LIMIT_MB: "${VISION_CUDA_MEM_LIMIT_MB:-1024}"
-      VISION_INTRA_THREADS: "${VISION_INTRA_THREADS:-4}"
+      # Сумма INTRA_THREADS не должна превышать количество ядер в cpuset 
+      VISION_INTRA_THREADS: 2 
+      VISION_INTER_THREADS: 1
+      # Запрещаем OpenBLAS создавать лишние потоки поверх ONNX Runtime 
+      OPENBLAS_NUM_THREADS: 1
       ORT_STRATEGY: "${ORT_STRATEGY:-download}"
       NVIDIA_VISIBLE_DEVICES: "${NVIDIA_VISIBLE_DEVICES:-all}"
       NVIDIA_DRIVER_CAPABILITIES: "${NVIDIA_DRIVER_CAPABILITIES:-compute,utility}"
     gpus: all
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
     depends_on:
       db:
         condition: service_healthy
@@ -50,6 +59,7 @@ services:
     container_name: audio-worker
     working_dir: /workspace/identification
     command: ["bash", "-lc", "cargo run -p audio-worker"]
+    cpuset: "2,3"
     ports:
       - "50053:50053"
     volumes:
@@ -62,11 +72,17 @@ services:
       AUDIO_FORCE_CPU: "${AUDIO_FORCE_CPU:-1}"
       AUDIO_USE_CUDA: "${AUDIO_USE_CUDA:-0}"
       AUDIO_CUDA_MEM_LIMIT_MB: "${AUDIO_CUDA_MEM_LIMIT_MB:-256}"
-      AUDIO_INTRA_THREADS: "${AUDIO_INTRA_THREADS:-2}"
+      AUDIO_INTRA_THREADS: 2
+      AUDIO_INTER_THREADS: 1
+      OPENBLAS_NUM_THREADS: 1
       ORT_STRATEGY: "${ORT_STRATEGY:-download}"
       NVIDIA_VISIBLE_DEVICES: "${NVIDIA_VISIBLE_DEVICES:-all}"
       NVIDIA_DRIVER_CAPABILITIES: "${NVIDIA_DRIVER_CAPABILITIES:-compute,utility}"
     gpus: all
+    deploy:
+      resources:
+        limits:
+          cpus: '2.0'
     depends_on:
       db:
         condition: service_healthy
