Make monitoring rely on door-agent session orchestration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
     "vision-worker",
     "audio-worker",
     "shared",
-    "hardware-controller",
+    "door-agent",
 ]
 
 [workspace.package]
